--- a/.docker/assets/nginx-conf/default.conf
+++ b/.docker/assets/nginx-conf/default.conf
@@ -36,7 +36,7 @@ server {
     add_header X-Content-Type-Options nosniff;
 
     location ~ \.php$ {
-        fastcgi_pass  wordpress:9000;
+        fastcgi_pass  app:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
