--- a/www/package.json
+++ b/www/package.json
@@ -2,6 +2,7 @@
   "name": "example",
   "version": "1.0.0",
   "main": "index.js",
+  "private": true,
   "licences": [
     {
       "type": "MIT",
