--- a/.docker/assets/nginx-conf/default.conf
+++ b/.docker/assets/nginx-conf/default.conf
@@ -3,7 +3,7 @@ server {
     listen 443 ssl;
     server_name _;
 
-    root /var/www;
+    root /var/www/html;
     index index.php index.html index.htm;
 
     ssl_certificate /etc/ssl/certs/ssl-cert-snakeoil.pem;
