--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     depends_on:
       - mysql
     volumes:
-      - ./www:/var/www:z
+      - ./www:/var/www/html:z
       - ./.docker/assets/php-conf/default.ini:/usr/local/etc/php/conf.d/default.ini
       - ./.docker/assets/php-conf/php-smtp.ini:/usr/local/etc/php/conf.d/php-smtp.ini
     ports:
@@ -25,7 +25,7 @@ services:
     image: nginx:${NGINX_VERSION}-alpine
     restart: unless-stopped
     volumes:
-      - ./www:/var/www:delegated
+      - ./www:/var/www/html:delegated
       - ./logs:/var/log/nginx
       - ./.docker/assets/nginx-conf/default.conf:/etc/nginx/conf.d/default.conf:ro
       - ./.docker/assets/certs/ssl-cert-snakeoil.pem:/etc/ssl/certs/ssl-cert-snakeoil.pem
