--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       XDEBUG_CONFIG: remote_host=host.docker.internal idekey=PHPSTORM remote_port=10000 remote_enable=1 remote_connect_back=1 remote_autostart=false
       SITENAME: ${PROJECT_NAME}
       DB_NAME: ${PROJECT_NAME}
-      CURRENT_UID: ${CURRENT_UID}
-      OS_NAME: ${OS_NAME}
+    user:
+      ${UID}:${GID}
     depends_on:
       - mysql
     volumes:
@@ -30,6 +30,8 @@ services:
       - ./.docker/assets/nginx-conf/default.conf:/etc/nginx/conf.d/default.conf:ro
       - ./.docker/assets/certs/ssl-cert-snakeoil.pem:/etc/ssl/certs/ssl-cert-snakeoil.pem
       - ./.docker/assets/certs/ssl-cert-snakeoil.key:/etc/ssl/private/ssl-cert-snakeoil.key
+    user:
+      ${UID}:${GID}
     depends_on:
       - app
     ports:
@@ -44,6 +46,8 @@ services:
       MYSQL_USER: webdev
       MYSQL_PASSWORD: root
       MYSQL_DATABASE: ${PROJECT_NAME}
+    user:
+      ${UID}:${GID}
     volumes:
       - mysqldata:/var/lib/mysql
       - ./database:/database
@@ -75,8 +79,8 @@ services:
     restart: 'no'
     command: bash -c "yarn install --verbose --pure-lockfile && touch ./node_modules/.install-done"
     entrypoint: ""
-    environment:
-      CURRENT_UID: ${CURRENT_UID}
+    user:
+      ${UID}:${GID}
     volumes:
       - ./www:/home/node:delegated
     working_dir: /home/node
@@ -86,8 +90,8 @@ services:
     image: composer:${COMPOSER_VERSION}
     restart: 'no'
     command: bash -c "composer install && echo 'Project ready on https://localhost'"
-    environment:
-      CURRENT_UID: ${CURRENT_UID}
+    user:
+      ${UID}:${GID}
     depends_on:
       - app
     entrypoint: ""
