--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,8 +30,6 @@ services:
       - ./.docker/assets/nginx-conf/default.conf:/etc/nginx/conf.d/default.conf:ro
       - ./.docker/assets/certs/ssl-cert-snakeoil.pem:/etc/ssl/certs/ssl-cert-snakeoil.pem
       - ./.docker/assets/certs/ssl-cert-snakeoil.key:/etc/ssl/private/ssl-cert-snakeoil.key
-    user:
-      ${UID}:${GID}
     depends_on:
       - app
     ports:
@@ -65,7 +63,7 @@ services:
     environment:
       DEVURL: https://nginx
     volumes:
-      - ./www:/home/node:rw
+      - ./www:/home/node:rw # @TODO share only package .lock, .json and node_modules
       - ./.docker/bin/wait-node-install.sh:/usr/local/bin/wait-node-install.sh
     working_dir: /home/node
     ports:
@@ -82,7 +80,7 @@ services:
     user:
       ${UID}:${GID}
     volumes:
-      - ./www:/home/node:delegated
+      - ./www:/home/node:delegated # @TODO share only package .lock, .json and node_modules
     working_dir: /home/node
 
   composer:
@@ -96,7 +94,7 @@ services:
       - app
     entrypoint: ""
     volumes:
-      - ./www:/app:cached
+      - ./www:/app:cached # @TODO share only composer .lock, .json and vendor
 
   mailhog:
     container_name: mailhog
