--- a/.docker/assets/nginx-conf/default.conf
+++ b/.docker/assets/nginx-conf/default.conf
@@ -1,5 +1,10 @@
 server {
     listen 80;
+    server_name _;
+
+    return 301 https://$host$request_uri;
+}
+server {
     listen 443 ssl;
     server_name _;
 
@@ -11,10 +16,23 @@ server {
 
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
+    add_header X-Frame-Options «DENY»;
+    add_header Content-Security-Policy "default-src 'self';";
+    add_header Referrer-Policy same-origin;
 
-    client_max_body_size 40m;
+    client_max_body_size 100m;
 
-    # Prevent PHP scripts from being executed inside the uploads folder.
+    location = /favicon.ico {
+        log_not_found off;
+        access_log off;
+    }
+
+    location = /robots.txt {
+        allow all;
+        log_not_found off;
+        access_log off;
+    }
+
     location ~* composer\.(json|lock)$ {
         deny all;
     }
@@ -31,9 +49,6 @@ server {
     location / {
         try_files $uri $uri/ /index.php?$args;
     }
-
-    # add global x-content-type-options header
-    add_header X-Content-Type-Options nosniff;
 
     location ~ \.php$ {
         fastcgi_pass  app:9000;
